last minor spacing fixes

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1340,7 +1340,7 @@ html.lenis {
     line-height: 43px;
   }
   .landing_page_header_btn {
-    font-size: 14px;
+    font-size: 12px;
   }
 }
 @media screen and (max-width: 1200px) {
